Updated CAM documents

--- a/manufacturing/ProjectOutputs/Design Rule Check - PCB.html
+++ b/manufacturing/ProjectOutputs/Design Rule Check - PCB.html
@@ -222,7 +222,7 @@
 	</script><title>Design Rule Verification Report</title>
 </head>
 <body onload=""><img ALT="Altium" src="
-			file://C:\Users\Public\Documents\Altium\AD14\Templates\AD-rgb_logo_223x64.gif
+			file://C:\Users\Public\Documents\Altium\AD13\Templates\AD-rgb_logo_223x64.gif
 		"><a href="dxpprocess://Client:SetupPreferences?Server=PCB|PageName=Reports" class="customize"><acronym title="dxpprocess://Client:SetupPreferences?Server=PCB|PageName=Reports">customize</acronym></a><h1>Design Rule Verification Report</h1>
 <table class="header_holder">
 <td Style="width:70%">
@@ -230,17 +230,17 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3">4/06/2014</td>
+<td class="front_matter_column3">5/06/2014</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3">4:06:10 PM</td>
+<td class="front_matter_column3">10:10:36 AM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3">00:00:07</td>
+<td class="front_matter_column3">00:00:06</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Filename</td>
@@ -262,7 +262,7 @@
 </table>
 </td>
 </table>
-<hr><a name="IDAO3NPTPHW3VTHGTQA41BL0RBO"><h2>Summary</h2></a><table>
+<hr><a name="IDA1OORTNPCNQJCMBTR51X3WQFKD"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -277,59 +277,59 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID2QPKU33T4K5GOUSLKYM4A0020O">Clearance Constraint (Gap=0.25mm) (IsRegion),(All)</a></td>
+<td class="column1"><a href="#IDJHRIZTVTPQ3GMNJQBT5GC3W5CI">Clearance Constraint (Gap=1mm) (InNet('EARTH')),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDEXP2QEAURV4ZKZVDIHH52JUSOH">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDXI3JEZVU5HETBCHQBVF2CWOCCM">Net Antennae (Tolerance=1mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDWNKQEYPGOFUGFOCNBHJZZKVJMK">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDHS0D30WZ1I3MEMOISB2W0ALQXN">Silk to Silk (Clearance=-100mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDG3IPEQ4OBI2GNQ5USIH3ATBFQB">Clearance Constraint (Gap=0.125mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDXQ2Z0KHD2KYRORDAK0DVXQG3F">Silk To Solder Mask (Clearance=-100mm) (IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDO5HHMAEK5AKRMTJ4CPS3LI4C4">Power Plane Connect Rule(Relief Connect )(Expansion=0.5mm) (Conductor Width=0.25mm) (Air Gap=0.25mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#ID3KDJ0MPT1LYUYEB4TYFDYGMIH">Minimum Solder Mask Sliver (Gap=-100mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID4LF23R1SYTBJPSI0OSX5QORVZO">Width Constraint (Min=0.125mm) (Max=5mm) (Preferred=0.25mm) (All)</a></td>
+<td class="column1"><a href="#IDR20WWRTAUKEWD1NX4WRGETPD4G">Hole To Hole Clearance (Gap=0mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDHTWDJALWOXTVB2POCEX1RY03QK">Height Constraint (Min=0mm) (Max=100mm) (Prefered=2.5mm) (All)</a></td>
+<td class="column1"><a href="#IDKE1LLTJ1J5K4POHE0XPD0UBGRH">Hole Size Constraint (Min=0.025mm) (Max=25mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID1HUWZCUYMET1DOWFLYV03N1PJ">Hole Size Constraint (Min=0.025mm) (Max=25mm) (All)</a></td>
+<td class="column1"><a href="#IDHIFY0WX1IWTMPBVPQGIFEWTB2G">Height Constraint (Min=0mm) (Max=100mm) (Prefered=2.5mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDBSTDTF0SPBMNMQD1D2MGURFKO">Hole To Hole Clearance (Gap=0mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDTABFC5KYF4OHHUM44HESW5U4Q">Width Constraint (Min=0.125mm) (Max=5mm) (Preferred=0.25mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDPAYYNGFELXYFH4IHB0BAATFS2L">Minimum Solder Mask Sliver (Gap=-100mm) (All),(All)</a></td>
+<td class="column1"><a href="#ID5U4CAIXCB4LDBXI5GA5M0D4KH">Power Plane Connect Rule(Relief Connect )(Expansion=0.5mm) (Conductor Width=0.25mm) (Air Gap=0.25mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDBXAAVVEBBNF1LPKTEEROZCVBFF">Silk To Solder Mask (Clearance=-100mm) (IsPad),(All)</a></td>
+<td class="column1"><a href="#ID2IWQXGZISQPPFHEYUCNUKVMRI">Clearance Constraint (Gap=0.125mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDY3LZUNIPUOY5GEIGMI1YDF4ZVK">Silk to Silk (Clearance=-100mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDS5K3VGJJE14OL52DVEWXDMAUAL">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDH52TXG0FFKXWFD5VPNE0M1ABOP">Net Antennae (Tolerance=1mm) (All)</a></td>
+<td class="column1"><a href="#IDR5SSBRGSXMETNNJVOZX22MSXZH">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDQ2Q1ALDYEKUWERF3KSIEMVESOP">Clearance Constraint (Gap=1mm) (InNet('EARTH')),(All)</a></td>
+<td class="column1"><a href="#IDGXQ2HCJ5UJQMOTMTZMWQXUP0YJ">Clearance Constraint (Gap=0.2mm) (IsRegion),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
